fix dark mode background

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
   text-align: center;
-  background: rgb(255,120,31);
-background: linear-gradient(180deg, rgba(255,120,31,1) 0%, rgba(153,13,13,1) 100%);
 }
 
 .App-logo {
@@ -43,7 +41,7 @@ background: linear-gradient(180deg, rgba(255,120,31,1) 0%, rgba(153,13,13,1) 100
 /* Light Mode Styles */
 
 .bg-light {
-  background-color: #fff;
+  background-color: #ff781f;
 }
 
 .heading-light {
